--- a/express/package.json
+++ b/express/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs-locals": "^1.0.2",
     "express": "^4.17.1",
     "nodemon": "^2.0.2"
